# jogg

./: README.md  meson.build
.github/workflows/: build.yml  package.yml
pkg/: PKGBUILD  PKGBUILD.gtk4-layer-shell
src/: jogg-application-window.c  jogg-application-window.h  jogg-application.c  jogg-application.h  jogg-enum-types.c.template  jogg-enum-types.h.template  jogg-enums.h  jogg-result-widget.c  jogg-result-widget.h  jogg-result.c  jogg-result.h  jogg-types.h  jogg-utils.c  jogg-utils.h  main.c  meson.build
src/res/: jogg.gresource.xml  styles.css
src/res/ui/: result.ui  window.ui
subprojects/: gtk4-layer-shell.wrap
